[gd_scene load_steps=23 format=3 uid="uid://15b2qs112sby"]

[ext_resource type="Theme" uid="uid://0wgv04mqiynd" path="res://resources/theme.tres" id="1_gkxdq"]
[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_m5ejq"]
[ext_resource type="Texture2D" uid="uid://fwrvm3j66sfp" path="res://sprites/cursor.png" id="4_jbupl"]
[ext_resource type="Script" path="res://scenes/cursor/custom_cursor_area.gd" id="4_r8n1r"]
[ext_resource type="PackedScene" uid="uid://bai1mn7pkejxd" path="res://scenes/tabs/config/config.tscn" id="5_ja8fx"]
[ext_resource type="PackedScene" uid="uid://b45l220vaqg64" path="res://scenes/title_bar/title_bar.tscn" id="5_swdrh"]
[ext_resource type="PackedScene" uid="uid://dkdoidmn0671h" path="res://scenes/tabs/data/data.tscn" id="6_vb1yo"]
[ext_resource type="PackedScene" uid="uid://pcav3prco7t3" path="res://scenes/tab_bar/tab_button.tscn" id="7_v1pju"]
[ext_resource type="Shader" path="res://resources/upscale.gdshader" id="8_6eq3e"]
[ext_resource type="PackedScene" uid="uid://bc278mnvr06il" path="res://scenes/tabs/images/images.tscn" id="8_yy7eo"]
[ext_resource type="PackedScene" uid="uid://6p3ido4lslms" path="res://scenes/tabs/mods/mods.tscn" id="10_fumfb"]
[ext_resource type="PackedScene" uid="uid://fqbgimujmdfu" path="res://scenes/tabs/events/events.tscn" id="10_j65lr"]
[ext_resource type="PackedScene" uid="uid://it66mj8cvd43" path="res://scenes/focus_ring/focus_ring.tscn" id="10_xcut4"]
[ext_resource type="PackedScene" uid="uid://c540nihbdb16h" path="res://scenes/loading_spinner/loading_spinner.tscn" id="11_255xx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cgxj"]
bg_color = Color(0.0313726, 0.0313726, 0.0313726, 1)
border_width_left = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0980392, 0.0862745, 0.0901961, 1)
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwxmc"]
size = Vector2(236, 138)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sr65b"]
bg_color = Color(0, 0, 0, 0.639216)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mfgq8"]
shader = ExtResource("8_6eq3e")
shader_parameter/scale = 1.0

[sub_resource type="Gradient" id="Gradient_gjvg3"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h4mgw"]
gradient = SubResource("Gradient_gjvg3")
width = 1

[sub_resource type="Shader" id="Shader_3tvbt"]
code = "shader_type canvas_item;
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_nearest_mipmap;

void fragment() {
	vec2 uv = (round((SCREEN_UV / SCREEN_PIXEL_SIZE) * 0.5) + vec2(0.5, 0.5)) * SCREEN_PIXEL_SIZE;
	COLOR = texture(SCREEN_TEXTURE, uv);

}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uic44"]
shader = SubResource("Shader_3tvbt")

[node name="Main" type="Control" node_paths=PackedStringArray("tabs_parent", "modal_background", "loading_spinner", "tab_buttons_parent", "images_tab")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_gkxdq")
script = ExtResource("1_m5ejq")
tabs_parent = NodePath("Window/Body/ContentContainer/Content/Control/Tabs")
modal_background = NodePath("Window/Body/ContentContainer/Content/Control/ModalBackground")
loading_spinner = NodePath("Window/Body/ContentContainer/Content/Control/LoadingSpinner")
tab_buttons_parent = NodePath("Window/Body/ContentContainer/Content/Control/TabButtons")
images_tab = NodePath("Window/Body/ContentContainer/Content/Control/Tabs/Images")
metadata/_disabled_ = false

[node name="Window" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/separation = 0
metadata/_disabled_ = false

[node name="TitleBar" parent="Window" instance=ExtResource("5_swdrh")]
layout_mode = 2
metadata/_disabled_ = false

[node name="Body" type="PanelContainer" parent="Window"]
clip_children = 2
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_5cgxj")
metadata/_disabled_ = false
metadata/_edit_use_anchors_ = true

[node name="ContentContainer" type="SubViewportContainer" parent="Window/Body"]
layout_mode = 2
stretch = true

[node name="Content" type="SubViewport" parent="Window/Body/ContentContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="FocusRing" parent="Window/Body/ContentContainer/Content" instance=ExtResource("10_xcut4")]
metadata/_disabled_ = false

[node name="Control" type="Control" parent="Window/Body/ContentContainer/Content"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gkxdq")

[node name="Tabs" type="VBoxContainer" parent="Window/Body/ContentContainer/Content/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0
metadata/_disabled_ = false

[node name="Config" parent="Window/Body/ContentContainer/Content/Control/Tabs" instance=ExtResource("5_ja8fx")]
visible = false
layout_mode = 2
theme = null

[node name="Mods" parent="Window/Body/ContentContainer/Content/Control/Tabs" instance=ExtResource("10_fumfb")]
visible = false
layout_mode = 2

[node name="Images" parent="Window/Body/ContentContainer/Content/Control/Tabs" instance=ExtResource("8_yy7eo")]
visible = false
layout_mode = 2

[node name="Data" parent="Window/Body/ContentContainer/Content/Control/Tabs" instance=ExtResource("6_vb1yo")]
layout_mode = 2

[node name="Events" parent="Window/Body/ContentContainer/Content/Control/Tabs" instance=ExtResource("10_j65lr")]
visible = false
layout_mode = 2

[node name="TabButtons" type="HBoxContainer" parent="Window/Body/ContentContainer/Content/Control"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
mouse_filter = 2
metadata/_disabled_ = false

[node name="Config" parent="Window/Body/ContentContainer/Content/Control/TabButtons" instance=ExtResource("7_v1pju")]
layout_mode = 2
size_flags_vertical = 0
text = "Config"
metadata/_disabled_ = false

[node name="Mods" parent="Window/Body/ContentContainer/Content/Control/TabButtons" instance=ExtResource("7_v1pju")]
visible = false
layout_mode = 2
size_flags_vertical = 0
text = "Mods"
metadata/_disabled_ = false

[node name="Images" parent="Window/Body/ContentContainer/Content/Control/TabButtons" instance=ExtResource("7_v1pju")]
visible = false
layout_mode = 2
size_flags_vertical = 0
text = "Images"
metadata/_disabled_ = false

[node name="Data" parent="Window/Body/ContentContainer/Content/Control/TabButtons" instance=ExtResource("7_v1pju")]
visible = false
layout_mode = 2
size_flags_vertical = 0
text = "Data"
metadata/_disabled_ = false

[node name="Events" parent="Window/Body/ContentContainer/Content/Control/TabButtons" instance=ExtResource("7_v1pju")]
visible = false
layout_mode = 2
size_flags_vertical = 0
text = "Events"
metadata/_disabled_ = false

[node name="CursorArea" type="Area2D" parent="Window/Body/ContentContainer/Content/Control" node_paths=PackedStringArray("control_node")]
visible = false
top_level = true
position = Vector2(120, 69)
script = ExtResource("4_r8n1r")
control_node = NodePath("../../../../..")
metadata/_disabled_ = false

[node name="Cursor" type="Sprite2D" parent="Window/Body/ContentContainer/Content/Control/CursorArea"]
top_level = true
position = Vector2(0, -20)
texture = ExtResource("4_jbupl")
centered = false
metadata/_disabled_ = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Window/Body/ContentContainer/Content/Control/CursorArea"]
shape = SubResource("RectangleShape2D_gwxmc")
metadata/_disabled_ = false

[node name="LoadingSpinner" parent="Window/Body/ContentContainer/Content/Control" instance=ExtResource("11_255xx")]
visible = false
layout_mode = 1

[node name="ModalBackground" type="PanelContainer" parent="Window/Body/ContentContainer/Content/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sr65b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
metadata/_disabled_ = false

[node name="Downscale" type="TextureRect" parent="CanvasLayer"]
visible = false
texture_filter = 2
material = SubResource("ShaderMaterial_mfgq8")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 256.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture1D_h4mgw")
metadata/_disabled_ = false
metadata/_edit_lock_ = true

[node name="Upscale" type="TextureRect" parent="CanvasLayer"]
visible = false
texture_filter = 2
material = SubResource("ShaderMaterial_uic44")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 256.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture1D_h4mgw")
metadata/_disabled_ = false
metadata/_edit_lock_ = true

[node name="DeadTaskTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="exit_requested" from="Window/TitleBar" to="." method="_on_title_bar_exit_requested"]
[connection signal="minimize_requested" from="Window/TitleBar" to="." method="_on_title_bar_minimize_requested"]
[connection signal="mouse_entered" from="Window/Body/ContentContainer/Content/Control/CursorArea" to="Window/Body/ContentContainer/Content/Control/CursorArea" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Window/Body/ContentContainer/Content/Control/CursorArea" to="Window/Body/ContentContainer/Content/Control/CursorArea" method="_on_mouse_exited"]
[connection signal="timeout" from="DeadTaskTimer" to="." method="_on_dead_task_timer_timeout"]
